crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badMaterialBinding.usdc
version https://git-lfs.github.com/spec/v1
oid sha256:0a20e9709a4fab4300102e3087034ded4fcf461101332d9fff169e6c87b1d9c4
size 924
